mobile responsive so it aligns correctly

--- a/src/styles/PublicationsPage.module.less
+++ b/src/styles/PublicationsPage.module.less
@@ -40,6 +40,10 @@
   }
 }
 
+.pubimagecontainer {
+  
+}
+
 .pubcarddate {
   color: @warm-grey;
   font-size: @font-small-size;
